fix(fonts): added "font-display: swap;" to avoid showing invisible text
The easiest way to avoid showing invisible text while custom fonts load is to temporarily show a
system font. See https://web.dev/font-display/#how-to-avoid-showing-invisible-text

--- a/wowchemy/assets/scss/academic/_card.scss
+++ b/wowchemy/assets/scss/academic/_card.scss
@@ -104,6 +104,7 @@ a.summary-link {
   opacity: 0;
   transition: all 0.2s ease-out;
   font-family: 'Font Awesome 5 Free';
+  font-display: swap;
   font-weight: 900;
   content: '\f0c1';
   text-align: center;
