--- a/wowchemy/assets/scss/academic/_search.scss
+++ b/wowchemy/assets/scss/academic/_search.scss
@@ -78,6 +78,7 @@
 
 #search-box::before {
   font-family: 'Font Awesome 5 Free';
+  font-display: swap;
   font-weight: 900;
   content: "\f002";
   font-size: 1rem;
